result in a new activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="question4">Луна - это планета?</string>
     <string name="question5">HTML - язык программирования?</string>
     <string name="answerBtn">Показать ответ</string>
+    <string name="resultTextTitle">Результат:</string>
 </resources>
